gitops/environments/stage/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-store-ingress
  namespace: retail-store-stage
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "squad-stage-static-ip"
    networking.gke.io/managed-certificates: "stage-ssl-cert"
spec:
  rules:
  - host: "34.8.135.138.nip.io" 
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ui-stage
            port:
              number: 80
